[package]
name = "tetrax"
version = "0.1.0"
edition = "2021"


[lib]
name = "tetraxlib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

libp2p = { version = "0.50.0", features = [
    "async-std",
    "dns",
    "gossipsub",
    "kad",
    "mdns",
    "metrics",
    "mplex",
    "noise",
    "pnet",
    "quic",
    "macros",
    "serde",
    "tcp",
    "tls",
    "websocket",
    "yamux",
] }

getrandom = { version = "0.2", features = ["js"] }
futures = "0.3.21"
log = "0.4.0"
env_logger = "0.9.0"
# async-std = { version = "1.12.0", features = ["attributes"] }
shamir = "~1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
